--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -14,7 +14,7 @@
     <div class="ae-container-fluid rk-topbar">
       <h1 class="rk-logo" routerLinkActive='active'>
         <a [routerLink]="['/home']"  >
-          Portafolio<sup>tm</sup>
+          {{infoPaginaService.info.titulo}}
         </a>
       </h1>
       <nav class="rk-navigation">
