--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,3 +41,14 @@
     -webkit-animation-name: fadeIn;
     animation-name: fadeIn;
   }
+
+
+
+
+/*
+  Color del Loading
+*/
+svg path,
+svg rect{
+  fill: black;
+}
