--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -32,10 +32,10 @@
 
 
       <div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4" *ngIf="!productoSerice.cargando">
-        <a *ngFor="let producto of productoSerice.productos" [routerLink]="['/item']" 
+        <a *ngFor="let producto of productoSerice.productos" [routerLink]="['/item', producto.cod]" 
         routerLinkActive="router-link-active"  class="animated fadeIn rk-item ae-masonry__item">
         <img src="assets/productos/{{producto.url}}.jpg" alt="">
-          <div class="item-meta">
+          <div [routerLink]="['/item', producto.cod]" class="item-meta">
             <h2>{{producto.titulo}}</h2>
             <p>{{producto.categoria}}</p>
           </div>
